# ai_explorer

./: README.md  pyproject.toml  requirements.txt  settings.yaml
ai_explorer/: app.py  cli.py  config.py  utils.py
ai_explorer/core/: __init__.py  analysis.py  embedding.py  models.py  preprocessor.py  processing.py
ai_explorer/infrastructure/: database.py  event_system.py  monitor.py  notification.py
ai_explorer/interfaces/: api.py  cli.py  gui.py
ai_explorer/models/: base_embedding_model.py  contextual_embedding_model.py  embedding_model.py  hybrid_embedding_model.py
ai_explorer/services/: analysis_service.py  processing_service.py
ai_explorer/utils/: logger.py  performance_monitor.py
data_pipeline/: app.py  cli.py  dependency_manager.py
data_pipeline/api/: rest_api.py
data_pipeline/auth/: auth_manager.py
data_pipeline/batch/: batch_processor.py
data_pipeline/config/: config.py  config_manager.py
data_pipeline/core/: search.py
data_pipeline/dashboard/: app.py  streamlit_app.py
data_pipeline/distributed/: dask_manager.py
data_pipeline/evaluation/: rag_evaluator.py
data_pipeline/indexing/: hnsw_index.py  incremental_indexer.py
data_pipeline/monitoring/: alert_system.py  file_monitor.py  metrics.py  monitor.py  observability.py  performance_monitor.py
data_pipeline/notifications/: notification_manager.py
data_pipeline/pipeline/: parallel_pipeline.py  pipeline.py
data_pipeline/plugins/: plugin_manager.py
data_pipeline/processors/: advanced_chunking.py  anomaly_detection.py  anomaly_event_detection.py  (+50 more)
plugins/: custom_processor.py
(+28 files in other folders)
