[tool.poetry]
name = "ai-explorer"
version = "0.1.0"
description = "Uma esteira de dados moderna com diversas funcionalidades de processamento"
authors = ["Seu Nome <seu.email@exemplo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
duckdb = "^0.7.1"
faiss-cpu = "^1.7.3"
transformers = "^4.28.1"
torch = "^1.13.1"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "ai_explorer.app:main"